--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "file-saver": "^1.3.3",
+    "lodash": "^4.17.4",
+    "material-design-lite": "^1.3.0",
+    "papaparse": "^4.1.2",
+    "showdown": "^1.6.0",
     "vue": "^2.1.0"
   },
   "devDependencies": {
